# CrewAI_Fitness_Agent

./: .env.example  README.md  fitness_agents.py  fitness_tasks.py  main.py  pyproject.toml
tools/: browser_tools.py  search_tools.py
